# apple-reading-list-to-sqlite

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
apple_reading_list_to_sqlite/: __version__.py  cli.py
tests/: test_cli.py
