[tool.poetry]
name = "apple-reading-list-to-sqlite"
version = "0.2.2"
description = "Export Apple Reading List to SQLite"
authors = ["ryanscott <ryscott@gmail.com>"]
readme = "README.md"
packages = [{include = "apple_reading_list_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
httpx = "^0.24.0"
sqlite-utils = "^3.30"

[tool.poetry.scripts]
apple-reading-list-to-sqlite= "apple_reading_list_to_sqlite.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "macos: marks tests as only on macos (deselect with '-m \"not macos\"')",
]
